{
    "name": "PlayerControllerActionMap",
    "maps": [
        {
            "name": "WorldInteraction",
            "id": "6a269ad1-b315-4313-8957-f5e1fd8de384",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Button",
                    "id": "3a5c4fda-46c6-4bd6-87c3-39183c52b57d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Augment",
                    "type": "Button",
                    "id": "85f11b3c-b49a-4903-ac6c-29b4ee6451af",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "fa3d7207-6cdf-4854-b24c-7efbf5f684fc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OptionsMenu",
                    "type": "Button",
                    "id": "fb1b1d28-7333-49e1-9cd2-12ba78a88f80",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "69ddb07e-3910-41e5-8508-a22fd83874c4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Melee",
                    "type": "Button",
                    "id": "01a1a217-114c-4581-8cde-d0a6712ce853",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fc4298da-9653-4ce3-93db-177813d5358b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Augment",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cca62b67-ff9f-4d09-8e93-b17dadf4dafb",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38941f64-c11c-4a0a-8b39-7ee97b633603",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OptionsMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "14160dfb-7ed9-4dca-a50f-85138a2c2981",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "4399fe78-faed-4bd6-8abd-65661e0481ff",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ff637c5e-79d8-426a-bfac-4516a9030995",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "f38ae01a-9866-4b7a-84bb-3a72630b6432",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b99d8ebe-46eb-4d56-943a-648569635f06",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "f2025da7-6341-469a-8c1f-9c280894b930",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "182469fe-eb32-419b-94f4-963b37bfaddf",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Melee",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "d9f2784a-5750-4cfe-a412-7066b8ba76df",
            "actions": [
                {
                    "name": "ConfirmSelection",
                    "type": "Button",
                    "id": "305dbde5-5372-4598-bbd0-19210456bc0e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b210cdd0-6a88-40ff-b160-1874ec505d94",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ConfirmSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}